[package]
name = "weather-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["query"] }
dotenv = "0.15.0"
redis = { version = "0.28.2", features = ["tokio-comp", "json"] }
reqwest = { version = "0.12.12", features = ["json"] } 
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tower_governor = { version = "0.6.0", features = ["axum"] }
